--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,13 +3,12 @@ stages:
     cmd: python ./src/data/data_ingestion.py
     deps:
       - ./src/data/data_ingestion.py
-    # I am tracking the outputs data here because dvc also makes the copy of this large dataset.Also, we have to track the data changes in s3 bucket so that need certain charge ... similarly, this will also generate traffic which cost certain charges. 
 
   extract_features:
     cmd: python ./src/features/extract_features.py
     deps: 
       - ./src/features/extract_features.py
-    params:
+    params: 
       - extract_features.mini_batch_kmeans.n_clusters
       - extract_features.mini_batch_kmeans.n_init
       - extract_features.mini_batch_kmeans.random_state
@@ -36,7 +35,7 @@ stages:
     outs:
       - ./models/encoder.joblib
       - ./models/model.joblib
-  
+
   evaluate:
     cmd: python ./src/models/evaluate.py
     deps:
@@ -46,4 +45,10 @@ stages:
       - ./data/processed/test.csv
       - ./data/processed/train.csv
     outs:
+      - ./run_information.json
+
+  register_model:
+    cmd: python ./src/models/register_model.py
+    deps:
+      - ./src/models/register_model.py
       - ./run_information.json
