--- a/requirements.txt
+++ b/requirements.txt
@@ -180,3 +180,12 @@ wrapt==1.17.2
 yarl==1.18.3
 zc.lockfile==3.0.post1
 zipp==3.21.0
+numpy
+pandas
+mlflow
+dagshub
+dvc
+dvc[s3]
+pytest
+scikit-learn
+joblib
